# auto-bencher

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
parameters/: test.toml
parameters/loading/: micro.toml  tpcc.toml
parameters/mgcrab/large-scale/3s-3d-6o/: bench-mgcrab.toml  bench-squall.toml  bench-stop-copy.toml  load.toml
parameters/mgcrab/large-scale/3s-6d-9o/: bench-mgcrab.toml  bench-squall.toml  bench-stop-copy.toml  load.toml
parameters/mgcrab/scale-out/: bench-tpcc-albatross.toml  bench-tpcc-mgcrab.toml  bench-tpcc-squall.toml  bench-tpcc-stop-copy.toml  load-tpcc.toml
properties/: elasql.properties  elasqlbench.properties  logging.properties  settings.json  vanillabench.properties  vanilladb.properties  vanilladbcomm.properties
src/: command.rs  config.rs  error.rs  init_env.rs  load.rs  main.rs  parameters.rs  preparation.rs  properties.rs
src/connections/: client.rs  mod.rs  server.rs
src/subcommands/: all_execute.rs  benchmark.rs  init_env.rs  load.rs  mod.rs  pull.rs
src/threads/: client.rs  mod.rs  server.rs
